k8s/jenkins/03.jenkins.service.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-jenkins-service
  namespace: cicd
  labels:
    app: cicd-jenkins-service
spec:
  selector:
    name: cicd-jenkins-pod
  type: NodePort
  ports:
  - name: web
    port: 8080
    targetPort: web
    nodePort: 32000
  - name: agent
    port: 50000
    targetPort: agent
    nodePort: 31000
